# CosmicSmithereens

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  UPDATES.md  workspace.code-workspace
Docs/Design/: GDD.md
Source/: CosmicSmithereens.sln
Source/CosmicSmithereens/: .gitignore  CApp.cpp  CApp.h  CosmicSmithereens.vcxproj  CosmicSmithereens.vcxproj.filters  main.cpp  packages.config  stdafx.cpp  stdafx.h
Source/CosmicSmithereens/Debugging/: Debug.cpp  Debug.h  ILogger.cpp  ILogger.h  Logging.cpp  Logging.h  SpdlogAPI.cpp
Source/CosmicSmithereens/Filesystem/: FSPlatform.cpp  FSPlatform.h
Source/CosmicSmithereens/Functions/: Strings.cpp  Strings.h
Source/CosmicSmithereens/Geometry/: CColor.cpp  CColor.h
Source/CosmicSmithereens/SystemComponents/: CWindow.cpp  CWindow.h  CWindowsSystem.cpp  CWindowsSystem.h
Source/CosmicSmithereens/Types/: CCollection.cpp  CCollection.h  CPoint.cpp  CPoint.h  CRect.cpp  CRect.h  ICollection.h
Source/CosmicSmithereens/UI/: Dialog.cpp  Dialog.h
Source/CosmicSmithereens/Utilities/: Any.cpp  Any.h  CAny.cpp  CAny.h  IAny.h  StringHelpers.cpp  StringHelpers.h
Tests/: .gitignore
Tests/UsefulTypes/: CCollection.cpp
